doc/k8s/yaml/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: xiyan
  labels:
    name: elasticsearch
spec:
  type: NodePort
  ports:
  - name:  web-9200
    port: 9200
    targetPort: 9200
    protocol: TCP
    nodePort: 32309
  - name:  web-9300
    port: 9300
    targetPort: 9300
    protocol: TCP
    nodePort: 32365
  selector:
    name: elasticsearch



---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: xiyan
spec:
  replicas: 1
  selector:
    matchLabels:
      name: elasticsearch
  template:
    metadata:
      labels:
        name: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: registry.cn-shenzhen.aliyuncs.com/xiyan-blog/elasticsearch
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 1000m
            memory: 8Gi
          requests:
            cpu: 100m
            memory: 4Gi
        ports:
        - containerPort: 9200
        - containerPort: 9300
        volumeMounts:
        - name: elasticsearch
          mountPath: /mnt/search
        volumeMounts:
        - name: es-config
          mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
          subPath: elasticsearch.yml
      volumes:
      - name: elasticsearch
        hostPath:
          path: /root/k8s/data/elasticsearch_data
      - name: es-config
        configMap:
          name: es
