doc/k8s/yaml/grafana.yaml
apiVersion: v1
kind: Service
metadata:
   name: monitoring-grafana
   namespace: kube-system
   labels:
    k8s-app: grafana
    component: core
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 31000
  selector:
    k8s-app: grafana



---
apiVersion: apps/v1
kind: Deployment
metadata:
   name: monitoring-grafana
   namespace: kube-system
spec:
   selector:
    matchLabels:
      k8s-app: grafana   
   replicas: 1
   template:
     metadata:
       labels:
         task: monitoring
         k8s-app: grafana     
     spec:              
       containers:
       - name: grafana
         image: grafana/grafana
         ports:
         - containerPort: 3000
           protocol: TCP
