doc/k8s/yaml/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: xiyan
  name: kafka-service
  labels:
    app: kafka
spec:
  type: NodePort
  ports:
  - port: 9092
    name: kafka-port
    targetPort: 9092
    nodePort: 32312
    protocol: TCP
  selector:
    app: kafka



---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-deployment
  namespace: xiyan
spec:
  replicas: 1
  selector:
    matchLabels:
      name: kafka
  template:
    metadata:
      labels:
        name: kafka
        app: kafka
    spec:
      containers:
      - name: kafka
        image: registry.cn-shenzhen.aliyuncs.com/xiyan-blog/kafka
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9092
