doc/k8s/yaml/mysql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: xiyan
  labels:
    app: mysql
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: yoostar403
          image: 'registry.cn-shenzhen.aliyuncs.com/xiyan-blog/mysql'
          imagePullPolicy: IfNotPresent
          name: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
              name: http
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-conf
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: mysql-data
          hostPath:
            path: /root/k8s/data/mysql_data
        - name: mysql-conf
          hostPath:
            path: /root/k8s/yaml/mysql/init


---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: xiyan
spec:
  type: NodePort
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 32306
