doc/k8s/yaml/nacos.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  namespace: xiyan
  labels:
    app: nacos
spec:
  ports:
    - port: 8848
      name: nacos
      targetPort: 8848
      nodePort: 32308 
  selector:
    app: nacos
  type: NodePort


---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nacos
  namespace: xiyan
spec:
  serviceName: nacos
  replicas: 1
  template:
    metadata:
      labels:
        app: nacos
      annotations:
        pod.alpha.kubernetes.io/initialized: "true"
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: "app"
                    operator: In
                    values:
                      - nacos
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: nacos
          imagePullPolicy: Always
          image: registry.cn-shenzhen.aliyuncs.com/xiyan-blog/nacos-server
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
          ports:
            - containerPort: 8848
              name: client
          volumeMounts:
            - name: custom-config
              mountPath: /home/nacos/init.d/custom.properties
      volumes:
        - name: custom-config
          hostPath:
            path: /root/k8s/yaml/nacos/custom.properties
  selector:
    matchLabels:
      app: nacos
