doc/k8s/yaml/oss-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oss-service
  name: oss-service
  namespace: xiyan
spec:
  ports:
  - name: http
    nodePort: 32320
    port: 8086
    protocol: TCP
    targetPort: 8086
  selector:
    app: oss-service
  type: NodePort



---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oss-service
  name: oss-service
  namespace: xiyan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oss-service
  template:
    metadata:
      labels:
        app: oss-service
    spec:
      containers:
        -  name: oss-service
           image: registry.cn-shenzhen.aliyuncs.com/xiyan-blog/oss-service
           imagePullPolicy: Always
           ports:
             - containerPort: 8086
           volumeMounts:
            - name: oss-data
              mountPath: /home/aisys/logs/oss-service/
      volumes:
        - name: oss-data
          hostPath:
            path: /root/k8s/data/oss_data
