doc/k8s/yaml/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: xiyan
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      nodePort: 32307
  type: NodePort



---
apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: xiyan
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: 'registry.cn-shenzhen.aliyuncs.com/xiyan-blog/redis'
      command:
        - redis-server
        - /redis-conf/redis.conf
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: '0.1'
      volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /redis-conf
          name: config
  volumes:
    - name: data
      emptyDir: {}
    - name: config
      configMap:
        name: redis-config
        items:
          - key: redis-config
            path: redis.conf
