doc/k8s/yaml/seata.yaml
apiVersion: v1
kind: Service
metadata:
  name: seata
  namespace: xiyan
  labels:
    k8s-app: seata
spec:
  type: NodePort
  ports:
    - port: 8091
      nodePort: 32310
      protocol: TCP
      name: http
  selector:
    k8s-app: seata

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: seata
  namespace: xiyan
  labels:
    k8s-app: seata
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: seata
  template:
    metadata:
      labels:
        k8s-app: seata
    spec:
      containers:
        - name: seata
          image: registry.cn-shenzhen.aliyuncs.com/xiyan-blog/seata-server
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8091
              protocol: TCP
          volumeMounts:
            - name: seata-config
              mountPath: /root/seata-config
      volumes:
        - name: seata-config
          configMap:
            name: seata-server-config
