doc/k8s/yaml/xiyan-gateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xiyan-gateway
  name: xiyan-gateway
  namespace: xiyan
spec:
  ports:
  - name: http
    nodePort: 32319
    port: 8084
    protocol: TCP
    targetPort: 8084
  selector:
    app: xiyan-gateway
  type: NodePort



---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xiyan-gateway
  name: xiyan-gateway
  namespace: xiyan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xiyan-gateway
  template:
    metadata:
      labels:
        app: xiyan-gateway
    spec:
      containers:
        -  name: xiyan-gateway
           image: registry.cn-shenzhen.aliyuncs.com/xiyan-blog/xiyan-gateway
           imagePullPolicy: Always
           ports:
             - containerPort: 8084
           volumeMounts:
            - name: gateway-data
              mountPath: /home/aisys/logs/xiyan-gateway/
      volumes:
        - name: gateway-data
          hostPath:
            path: /root/k8s/data/gateway_data
