doc/k8s/yaml/xiyan-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  namespace: xiyan
spec:
  rules:
  - host: first.bar.com
    http:
      paths:
      - backend:
          serviceName: pay
          servicePort: 6690
  - host: second.foo.com
    http:
      paths:
      - backend:
          serviceName: vue-xiyan-web
          servicePort: 80
